name:                frankenstein
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Interplanetary.Syntax
    Interplanetary.Predefined
    Interplanetary.Examples
    Interplanetary.Parser
    Interplanetary.Eval
    Interplanetary.Typecheck
    Interplanetary.Meta
    Interplanetary.Util
    Tests.Checking
    Tests.Parser
    Tests.Syntax
    -- Interplanetary.JSON
    -- Interplanetary.StrNat
  -- other-extensions:
  build-depends:
    base >=4.9 && <4.10,
    either == 4.4.*,
    mtl == 2.2.*,
    hashable == 1.2.*,
    vector >= 0.11,
    containers == 0.5.*,
    unordered-containers == 0.2.*,
    text == 1.2.*,
    lens >= 4.14,
    parsers == 0.12.*,
    trifecta == 1.6.*,
    indentation-trifecta,
    -- wreq,
    -- bytestring,
    -- aeson >= 1.1,
    -- monad-gen,
    unification-fd,
    errors == 2.1.*,
    -- scientific
    bound == 2,
    byteable >= 0.1 && < 1.0,
    cryptohash == 0.11.*,
    bytestring == 0.10.*,
    list-extras == 0.4.*,

    -- testing
    tasty == 0.11.*,
    tasty-hunit == 0.9.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fwarn-tabs

executable frankenstein
  main-is          : Main.hs
  hs-source-dirs   : app
  build-depends    :
    base,
    frankenstein,
    lens,
    aeson,
    unordered-containers,
    wreq,
    bytestring
  default-language : Haskell2010
  ghc-options:
    -Wall
    -fwarn-tabs
    -threaded
    -rtsopts
    -fexternal-interpreter

    -- -prof
    -- -fprof-auto

test-suite test
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  main-is          : test.hs
  build-depends    : base, frankenstein, tasty, tasty-hunit
  default-language : Haskell2010
