name:                frankenstein
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Interplanetary.Eval
    Interplanetary.Examples
    Interplanetary.Meta
    Interplanetary.Parser
    Interplanetary.Parser.QQ
    Interplanetary.Predefined
    Interplanetary.Syntax
    Interplanetary.UIdMap
    Interplanetary.UIds
    Interplanetary.Typecheck
    Interplanetary.MakeTables
    Interplanetary.Util

    -- Interplanetary.JSON
    -- Interplanetary.StrNat

    Tests.Eval
    Tests.Parser
    Tests.Syntax
    Tests.Typecheck

    -- load last so it'll be in scope
    Tests
  -- other-extensions:
  build-depends:
    base >=4.9 && <4.10,
    mtl == 2.2.*,
    containers == 0.5.*,
    unordered-containers == 0.2.*,
    text == 1.2.*,
    lens >= 4.14,
    parsers == 0.12.*,
    trifecta == 1.6.*,
    indentation-trifecta,
    bound == 2,
    byteable >= 0.1 && < 1.0,
    cryptohash == 0.11.*,
    bytestring == 0.10.*,
    newtype == 0.2.*,
    binary == 0.8.*,
    distributed-process == 0.6.*,
    template-haskell == 2.11.*,
    base16-bytestring == 0.1.*,
    -- multihash == 0.1.*,
    bifunctors == 5.4.*,
    hashable == 1.2.*,

    -- testing
    tasty == 0.11.*,
    tasty-hunit == 0.9.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fwarn-tabs

executable frankenstein
  main-is          : Main.hs
  hs-source-dirs   : app
  build-depends    :
    base,
    frankenstein,
    lens,
    aeson,
    unordered-containers,
    wreq,
    bytestring
  default-language : Haskell2010
  ghc-options:
    -Wall
    -fwarn-tabs
    -threaded
    -rtsopts
    -fexternal-interpreter

    -- -prof
    -- -fprof-auto

test-suite test
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  main-is          : test.hs
  build-depends    : base, frankenstein, tasty, tasty-hunit
  default-language : Haskell2010
