name:                interplanetary-computation
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable ipc
  main-is:             Main.hs
  other-modules:
    Interplanetary.Genesis
    Interplanetary.Eval
    Interplanetary.Meta
    Interplanetary.StrNat
  -- other-extensions:
  build-depends:
    base >=4.9 && <4.10,
    vector,
    unordered-containers,
    text,
    lens,
    wreq,
    bytestring,
    aeson >= 1.1,
    scientific
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
