name:                frankenstein
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Interplanetary.Syntax
    Interplanetary.Examples
    -- Interplanetary.Genesis
    -- Interplanetary.Typecheck
    -- Interplanetary.JSON
    -- Interplanetary.Oracles
    -- Interplanetary.Eval
    -- Interplanetary.Meta
    -- Interplanetary.StrNat
  -- other-extensions:
  build-depends:
    base >=4.9 && <4.10,
    either == 4.4.*,
    mtl == 2.2.*,
    hashable == 1.2.*,
    vector,
    containers == 0.5.*,
    unordered-containers,
    text,
    lens,
    -- wreq,
    -- bytestring,
    -- aeson >= 1.1,
    -- monad-gen,
    -- unification-fd,
    errors
    -- scientific
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fwarn-tabs

executable ipc
  main-is          : Main.hs
  hs-source-dirs   : app
  build-depends    :
    base,
    frankenstein,
    lens,
    aeson,
    unordered-containers,
    wreq,
    bytestring
  default-language : Haskell2010
  ghc-options:
    -Wall
    -fwarn-tabs
    -threaded
    -rtsopts
    -fexternal-interpreter

    -- -prof
    -- -fprof-auto

test-suite test
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  main-is          : test.hs
  build-depends    : base, frankenstein, tasty, tasty-hunit
  default-language : Haskell2010
