name:                planetary
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    -- core
    Planetary.Util
    Planetary.Core

    -- support
    Planetary.Support.Parser
    Planetary.Support.Parser.QQ
    Planetary.Support.Predefined
    Planetary.Support.UIds
    Planetary.Support.MakeTables

    -- test
    Tests.Eval
    Tests.Parser
    Tests.Syntax
    Tests.Typecheck

    -- load last so it'll be in scope (does it really work that way?)
    Tests
  -- other-extensions:
  build-depends:
    base >=4.9 && <4.10,
    mtl == 2.2.*,
    hashable == 1.2.*,
    vector >= 0.11,
    containers == 0.5.*,
    unordered-containers == 0.2.*,
    text == 1.2.*,
    lens >= 4.14,
    parsers == 0.12.*,
    trifecta == 1.6.*,
    indentation-trifecta,
    bound == 2,
    byteable >= 0.1 && < 1.0,
    cryptohash == 0.11.*,
    bytestring == 0.10.*,
    newtype == 0.2.*,
    binary == 0.8.*,
    template-haskell == 2.11.*,
    base16-bytestring == 0.1.*,
    ipld,
    binary-serialise-cbor,

    -- testing
    tasty == 0.11.*,
    tasty-hunit == 0.9.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fwarn-tabs

executable planetary
  main-is          : Main.hs
  hs-source-dirs   : app
  build-depends    :
    base,
    planetary,
    lens,
    aeson,
    unordered-containers,
    wreq,
    bytestring
  default-language : Haskell2010
  ghc-options:
    -Wall
    -fwarn-tabs
    -threaded
    -rtsopts
    -fexternal-interpreter

    -- -prof
    -- -fprof-auto

test-suite test
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  main-is          : test.hs
  build-depends    : base, planetary, tasty, tasty-hunit
  default-language : Haskell2010
